[package]
name = "mqtt2statsd"
license = "MIT"
version = "0.1.0"
description = "MQTT to Statsd bridge"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = [ "derive", "cargo" ]}
paho-mqtt = "0.12"
serde = { version = "1.0", features = ["derive"] }
statsd = "0.16"
toml = "0.8"
simplelog = "0.12"
log = "0.4"
ctrlc = "3.4"
